hide overflow for data-aos bug on mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -487,6 +487,7 @@ a {
 .block {
     --padding-vertical: 5rem;
     padding: var(--padding-vertical) 2rem;
+    overflow: hidden;
 }
 
 .block__header {
